Added basic events API - swagger changes
