# models/event.go
@@ -1,0 +1,108 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// Event event
+//
+// swagger:model event
+type Event struct {
+
+	// Unique identifier of the object this event relates to.
+	// Required: true
+	// Format: uuid
+	EntityID *strfmt.UUID `json:"entity_id" gorm:"index"`
+
+	// event time
+	// Required: true
+	// Format: date-time
+	EventTime *strfmt.DateTime `json:"event_time" gorm:"type:datetime"`
+
+	// message
+	// Required: true
+	Message *string `json:"message"`
+}
+
+// Validate validates this event
+func (m *Event) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateEntityID(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateEventTime(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateMessage(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *Event) validateEntityID(formats strfmt.Registry) error {
+
+	if err := validate.Required("entity_id", "body", m.EntityID); err != nil {
+		return err
+	}
+
+	if err := validate.FormatOf("entity_id", "body", "uuid", m.EntityID.String(), formats); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *Event) validateEventTime(formats strfmt.Registry) error {
+
+	if err := validate.Required("event_time", "body", m.EventTime); err != nil {
+		return err
+	}
+
+	if err := validate.FormatOf("event_time", "body", "date-time", m.EventTime.String(), formats); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *Event) validateMessage(formats strfmt.Registry) error {
+
+	if err := validate.Required("message", "body", m.Message); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *Event) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *Event) UnmarshalBinary(b []byte) error {
+	var res Event
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
