# restapi/operations/events/list_events_responses.go
@@ -1,0 +1,105 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package events
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/filanov/bm-inventory/models"
+)
+
+// ListEventsOKCode is the HTTP code returned for type ListEventsOK
+const ListEventsOKCode int = 200
+
+/*ListEventsOK Success.
+
+swagger:response listEventsOK
+*/
+type ListEventsOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload models.EventList `json:"body,omitempty"`
+}
+
+// NewListEventsOK creates ListEventsOK with default headers values
+func NewListEventsOK() *ListEventsOK {
+
+	return &ListEventsOK{}
+}
+
+// WithPayload adds the payload to the list events o k response
+func (o *ListEventsOK) WithPayload(payload models.EventList) *ListEventsOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the list events o k response
+func (o *ListEventsOK) SetPayload(payload models.EventList) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *ListEventsOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	payload := o.Payload
+	if payload == nil {
+		// return empty array
+		payload = models.EventList{}
+	}
+
+	if err := producer.Produce(rw, payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+}
+
+// ListEventsInternalServerErrorCode is the HTTP code returned for type ListEventsInternalServerError
+const ListEventsInternalServerErrorCode int = 500
+
+/*ListEventsInternalServerError Error.
+
+swagger:response listEventsInternalServerError
+*/
+type ListEventsInternalServerError struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewListEventsInternalServerError creates ListEventsInternalServerError with default headers values
+func NewListEventsInternalServerError() *ListEventsInternalServerError {
+
+	return &ListEventsInternalServerError{}
+}
+
+// WithPayload adds the payload to the list events internal server error response
+func (o *ListEventsInternalServerError) WithPayload(payload *models.Error) *ListEventsInternalServerError {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the list events internal server error response
+func (o *ListEventsInternalServerError) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *ListEventsInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(500)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
